@startuml
skinparam classAttributeIconSize 0
skinparam ClassSeparatorColor black
skinparam ClassSeparatorThickness 1
hide circle
hide stereotype

class Ui {
  + readCommand() : String {static}
  + hasMoreCommands() : boolean {static}
  + printBorder() : void {static}
  + printGoodbye() : void {static}
  + printWelcome() : void {static}
  + printAddApplication(newApplication : Application, userApplications : ArrayList<Application>) : void {static}
  - printApplication(app : Application, index : int) : void {static}
  + printAllApplications(userApplications : ArrayList<Application>) : void {static}
  + printFilteredApplications(filteredApplications : ArrayList<Application>, criteria : FilterCriteria) : void {static}
  + printSortedApplications(sortedApplications : ArrayList<Application>, criterias : String[]) : void {static}
  + printEditApplication(application : Application, index : int, editDetails : EditDetails) : void {static}
  + printDeleteApplication(application : Application, index : int) : void {static}
  + printUndoSuccess() : void {static}
  + printUnknownCommand() : void {static}
  + printUpcomingDeadlines(upcomingApplications : ArrayList<Application>, numDays : int, remindDate : LocalDate) : void {static}
}

class Application {
  - company : String
  - role : String
  - deadline : LocalDate
  - contact : String
  - status : String
}

class EditDetails {
  - company : String
  - role : String
  - deadline : LocalDate
  - contact : String
  - status : String
}

class FilterCriteria {
  - field : Field
  - textValue : String
  - deadlineValue : LocalDate
}

class Field <<enumeration>> {
  COMPANY
  ROLE
  DEADLINE
  CONTACT
  STATUS
}


Ui --> Application
Ui --> EditDetails
Ui --> FilterCriteria
FilterCriteria-->Field
@enduml